test/conformance/chainsaw/generate/policy/standard/existing/match-trigger-namespace-deprecated/policy.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: match-trigger-namespace
  namespace: match-trigger-namespace-ns
spec:
  generateExisting: true
  rules:
  - generate:
      apiVersion: v1
      data:
        data:
          modify: Zm9v
      kind: ConfigMap
      name: '{{request.object.metadata.name}}-modify'
      namespace: match-trigger-namespace-ns
      synchronize: true
    match:
      resources:
        kinds:
        - Secret
        selector:
          matchLabels:
            example.com/sm-sync: "true"
    name: get-synced-secrets
